<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <Button
        android:id="@+id/btn_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="172dp"
        android:text="@string/btn_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_agefill"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_proEmail"
        android:layout_width="191dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_proEmail"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/greeting" />

    <TextView
        android:id="@+id/tv_proFullName"
        android:layout_width="156dp"
        android:layout_height="40dp"
        android:layout_marginTop="24dp"
        android:text="@string/tv_profullName"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.145"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_emailFill" />

    <TextView
        android:id="@+id/tv_emailFill"
        android:layout_width="299dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_emailFill"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_proEmail" />

    <TextView
        android:id="@+id/tv_fullname"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_fullname"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.804"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_proFullName" />

    <TextView
        android:id="@+id/tv_age"
        android:layout_width="125dp"
        android:layout_height="36dp"
        android:layout_marginTop="20dp"
        android:text="@string/tv_age"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.136"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_fullname" />

    <TextView
        android:id="@+id/tv_agefill"
        android:layout_width="295dp"
        android:layout_height="43dp"
        android:layout_marginTop="16dp"
        android:text="@string/tv_agefill"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.801"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_age" />

    <TextView
        android:id="@+id/greeting"
        android:layout_width="338dp"
        android:layout_height="60dp"
        android:layout_marginTop="28dp"
        android:text="@string/greeting"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>